<resources>
    <string name="app_name">Asteroides</string>

    <string name="action_settings">Configuración</string>
    <string name="action_aboutof">Acerca de...</string>
    <string name="btnJugar">Jugar</string>
    <string name="btnConfigurar">Configurar</string>
    <string name="btnAcercaDe">Acerca de</string>
    <string name="btnSalir">Salir</string>
    <string name="title_activity_acerca_de">Acerca de ...</string>
    <string name="AcercaDe">Este programa ha sido desarrollado como
        ejemplo en el curso de Android para demostrar cómo se
        pueden lanzar nuevas actividades desde la actividad principal.</string>

</resources>
